# django-hidp

./: .gitignore  .mailmap  Makefile  README.md  SECURITY.md  compose.override.yaml  compose.yaml  docker-compose.build-docs.yml  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/actions/backend/: action.yml
.github/actions/build-api-docs/: action.yml
.github/actions/build-hidp-docs/: action.yml
.github/actions/python-qa/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build-docs.yml  deploy-docs.yml  labeler.yml  release-drafter.yml  release.yml  test.yml
backend/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml  requirements.txt
backend/hidp/: asgi.py  local.example.ini  settings.py  urls.py
backend/hidp/accounts/: auth.py  auth_urls.py  forms.py  (+5 more)
backend/tests/: test_settings.py  test_urls.py
docker/: README.md
frontend/templates/: base.html
project/: Dockerfile  Makefile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  requirements_local.txt
project/hidp/: settings.py  urls.py  wsgi.py
project/hidp/accounts/: auth.py
project/hidp/accounts/migrations/: 0001_initial.py
project/hidp/accounts/templates/accounts/: login.html
project/hidp/config/: __init__.py
project/hidp_sandbox/: asgi.py  local.example.ini  settings.py  urls.py  wsgi.py
project/hidp_sandbox/accounts/migrations/: 0001_initial.py
project/hidp_sandbox/oidc_providers/: oidc_certification.py
project/tests/: test_settings.py
project/tests/smoke_tests/: test_django_admin.py  test_root.py
project/tests/unit_tests/test_accounts/: test_auth.py  test_user_model.py
(+17 files in other folders)
