[project]
name = "hidp"
requires-python = ">=3.11"  # server constraint

[tool.ruff]
extend = "../packages/hidp-pycqa/pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = [
  "hidp"
]

[tool.ruff.lint.isort.sections]
django = [
  "django",
]

[tool.coverage.run]
branch = true
source = [
  "hidp_sandbox",
  "tests",
]
omit = [
  "**/[aw]sgi.py",
  "**/migrations/*",
  "**/settings.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.html]
directory = "../var/htmlcov"
