[project]
name = "hidp"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
  "django-email-bandit~=2.0.0",
  "django-filter~=24.2",
  "django~=5.2",
  "django-hidp[all]",
  "leukeleu-django-checks~=1.2",
  "psycopg[binary]~=3.2",
  "sentry-sdk~=2.0",
]

[dependency-groups]
dev = [
  "django-hidp[all]",
  "hidp-pycqa",
  "redis[hiredis]~=5.2.0",
]

[tool.uv.sources.django-hidp]
path = "../packages/hidp"
editable = true

[tool.uv.sources.hidp-pycqa]
path = "../packages/hidp-pycqa"
editable = true

[tool.ruff]
extend = "../packages/hidp-pycqa/pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = [
  "hidp"
]

[tool.ruff.lint.isort.sections]
django = [
  "django",
]

[tool.coverage.run]
branch = true
source = [
  "hidp_sandbox",
  "tests",
]
omit = [
  "**/[aw]sgi.py",
  "**/migrations/*",
  "**/settings.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.html]
directory = "../var/htmlcov"
